--- a/frontend/src/components/Form/style.css
+++ b/frontend/src/components/Form/style.css
@@ -35,6 +35,7 @@
 	text-transform:uppercase;
 }
 .login-html .tab{
+	color: grey;
 	font-size:22px;
 	margin-right:15px;
     justify-content: space-around;
